--- a/contacts.html
+++ b/contacts.html
@@ -146,7 +146,7 @@
                 <span class="contact-logo-bigger light-orange">TW</span>
                 <form action="">
                     <div class="clos-x-dark-container">
-                        <img class="close-x-dark" src="./asssets/img/close-x-dark.svg" alt="close x">
+                        <img class="close-x-dark d-none" src="./asssets/img/close-x-dark.svg" alt="close x">
                     </div>
                     <div class="input-field-top">
                         <textarea class="name-displayed" name="name" id="name-displayed" cols="50"
@@ -176,7 +176,7 @@
         </div>
     </div>
     </div>
-    <div class="add-contact">
+    <div class="add-contact d-none">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
                 <div class="x-container">
@@ -206,9 +206,9 @@
                             <img src="./asssets/img/tel.svg" alt="name icon">
                         </div>
                         <div class="create-contact-container">
-                            <div class="cancle">
+                            <div class="cancle d-none">
                                 <div class="cancle-text">Cancle</div>
-                                <img class="check-white" src="./asssets/img/close-x-dark.svg" alt="check">
+                                <img class="x-dark" src="./asssets/img/close-x-dark.svg" alt="Cancle">
                             </div>
                             <div class="create-contact">
                                 <div class="create-contact-text white">Create contact</div>
