some more changes

--- a/contacts.html
+++ b/contacts.html
@@ -98,27 +98,29 @@
                         <hr class="hr-blue-small-left">
                     </div>
                 </div>
-                <div class="name-add-task-logo">
-                    <span class="contact-logo-big orange">AM</span>
-                    <div class="name-add-task">
-                        <span class="big-name">Anton Mayer</span>
-                        <span class="email">+ Add Task</span>
+                <div class="desktop-hidden">
+                    <div class="name-add-task-logo">
+                        <span class="contact-logo-big orange">AM</span>
+                        <div class="name-add-task">
+                            <span class="big-name">Anton Mayer</span>
+                            <span class="email">+ Add Task</span>
+                        </div>
                     </div>
-                </div>
-                <div class="contact-information-frame">
-                    <h3 class="contact-information">Contact Information</h3>
-                    <div class="edit-pen">
-                        <img class="edit-contact-logo" src="./asssets/img/edit_contact.svg" alt="edit contact logo">
-                        <span class="edit-contact-text">Edit Contact</span>
+                    <div class="contact-information-frame">
+                        <h3 class="contact-information">Contact Information</h3>
+                        <div class="edit-pen">
+                            <img class="edit-contact-logo" src="./asssets/img/edit_contact.svg" alt="edit contact logo">
+                            <span class="edit-contact-text">Edit Contact</span>
+                        </div>
                     </div>
-                </div>
-                <div class="email-data">
-                    <span class="email-head">Email</span>
-                    <span class="email-adress-blue">antom@gmail.com</span>
-                </div>
-                <div class="mobile-data">
-                    <span class="mobile-head">Mobil</span>
-                    <span class="mobile-number-blue">+49 1111 111 11 1</span>
+                    <div class="email-data">
+                        <span class="email-head">Email</span>
+                        <span class="email-adress-blue">antom@gmail.com</span>
+                    </div>
+                    <div class="mobile-data">
+                        <span class="mobile-head">Mobil</span>
+                        <span class="mobile-number-blue">+49 1111 111 11 1</span>
+                    </div>
                 </div>
                 <div class="delet-edit-frame">
                     <img class="bin" src="./asssets/img/delete-bin.svg" alt="delete bin">
@@ -131,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="edit-contact d-none">
+    <div class="edit-contact ">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
                 <div class="x-container">
@@ -189,34 +191,34 @@
 
             </div>
             <div class="add-contact-bottom">
-                    <span class="contact-logo-template gray">
-                        <img class="big-head" src="./asssets/img/big-head.svg" alt="person head">
-                    </span>
-                    <form action="">
-                        <div class="input-field-top">
-                            <input class="name-input" type="name" required placeholder="Name">
-                            <img src="./asssets/img/name-head.svg" alt="name icon">
+                <span class="contact-logo-template gray">
+                    <img class="big-head" src="./asssets/img/big-head.svg" alt="person head">
+                </span>
+                <form action="">
+                    <div class="input-field-top">
+                        <input class="name-input" type="name" required placeholder="Name">
+                        <img src="./asssets/img/name-head.svg" alt="name icon">
+                    </div>
+                    <div class="input-field">
+                        <input class="email-input" type="email" placeholder="Email">
+                        <img src="./asssets/img/email-icon.svg" alt="email icon">
+                    </div>
+                    <div class="input-field">
+                        <input class="tel-input" type="tel" placeholder="Phone">
+                        <img src="./asssets/img/tel.svg" alt="name icon">
+                    </div>
+                    <div class="create-contact-container">
+                        <div class="cancle d-none">
+                            <div class="cancle-text">Cancle</div>
+                            <img class="x-dark" src="./asssets/img/close-x-dark.svg" alt="Cancle">
                         </div>
-                        <div class="input-field">
-                            <input class="email-input" type="email" placeholder="Email">
-                            <img src="./asssets/img/email-icon.svg" alt="email icon">
+                        <div class="create-contact">
+                            <div class="create-contact-text white">Create contact</div>
+                            <img class="check-white" src="./asssets/img/check-white.svg" alt="check">
                         </div>
-                        <div class="input-field">
-                            <input class="tel-input" type="tel" placeholder="Phone">
-                            <img src="./asssets/img/tel.svg" alt="name icon">
-                        </div>
-                        <div class="create-contact-container">
-                            <div class="cancle d-none">
-                                <div class="cancle-text">Cancle</div>
-                                <img class="x-dark" src="./asssets/img/close-x-dark.svg" alt="Cancle">
-                            </div>
-                            <div class="create-contact">
-                                <div class="create-contact-text white">Create contact</div>
-                                <img class="check-white" src="./asssets/img/check-white.svg" alt="check">
-                            </div>
-                        </div>
-                    </form>
-                
+                    </div>
+                </form>
+
             </div>
         </div>
     </div>
