tablet version finished

--- a/contacts.html
+++ b/contacts.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="edit-contact ">
+    <div class="edit-contact d-none">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
                 <div class="x-container">
