--- a/contacts.html
+++ b/contacts.html
@@ -18,6 +18,7 @@
 
 <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
     <div class="new-contact-frame">
         <div class="new-contact-container-frame">
             <div class="new-contact-container">
@@ -81,7 +82,7 @@
     </div>
     <div class="add-contact d-none">
         <div class="edit-contact-frame">
-            <div class="edit-contact-head"> 
+            <div class="edit-contact-head">
                 <div class="x-container">
                     <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
                 </div>
