--- a/help.html
+++ b/help.html
@@ -15,6 +15,7 @@
 
   <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
 
       <button id="create-button">Create &#10003;</button>
 
