--- a/summary.html
+++ b/summary.html
@@ -16,6 +16,7 @@
 </head>
 <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
     <div class="main-div">
         <section class="first-section">
             <span class="head-span">Kanban Project Management Tool</span>
