--- a/board.html
+++ b/board.html
@@ -17,6 +17,7 @@
 </head>
 <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
     <div class="main-div">
 
         <!------------------ Head Section ----------------------->
