scrollbar contacts added

--- a/contacts.html
+++ b/contacts.html
@@ -80,6 +80,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="letter-frame">
+                    <h2>E</h2>
+                    <hr class="standard-hr">
+                    <div class="single-contact-frame">
+                        <span class="contact-logo green">EF</span>
+                        <div class="name-and-email">
+                            <span class="name">Eva Fischer</span>
+                            <span class="email">eva@gmail.com</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="content-big-contact d-none">
