--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@
                 <div class="letter-frame">
                     <h2>A</h2>
                     <hr class="standard-hr">
-                    <div class="single-contact-frame">
+                    <div onclick="openContactDetails()" class="single-contact-frame">
                         <span class="contact-logo orange">AM</span>
                         <div class="name-and-email">
                             <span class="name">Anton Mayer</span>
@@ -111,7 +111,7 @@
                         <hr class="hr-blue-small-left">
                     </div>
                 </div>
-                <div id="desktop-hidden" ">
+                <div id="desktop-hidden" class="d-none">
                     <div class="name-add-task-logo">
                         <span class="contact-logo-big orange">AM</span>
                         <div class="name-add-task">
@@ -122,7 +122,7 @@
                     <div class="contact-information-frame">
                         <h3 class="contact-information">Contact Information</h3>
                         <div class="edit-pen" onclick="openEditContacts()">
-                            <img onmousemove="changePenColorToBlue()" onmouseleave="changePenColorToBlack()" id="edit-contact-logo" class="edit-contact-logo" src="./asssets/img/edit_contact.svg" alt="edit contact logo">
+                            <img onmousemove="changePenColorToBlue()" onmouseleave="changePenColorToBlack()" id="edit-contact-logo" class="edit-contact-logo" src="./asssets/img/edit-contact.svg" alt="edit contact logo">
                             <span class="edit-contact-text">Edit Contact</span>
                         </div>
                     </div>
