--- a/add_task.html
+++ b/add_task.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="/asssets/css/header.css">
   <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
   <link rel="stylesheet" href="/asssets/css/footer.css">
-  <script src="footer.js"></script>
-  <script src="header_include.js"></script>
+  <script src="./js/footer.js"></script>
   <link rel="stylesheet" href="asssets/css/add_task.css">
 </head>
 
@@ -122,7 +121,7 @@
 
 
   <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-  <script src="header_include.js"></script>
+  <script src="js/header_include.js"></script>
   <script src="./js/add_task.js"></script>
 </body>
 
