--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
-    <script src="footer.js"></script>
+    <script src="./js/footer.js"></script>
 </head>
 
 <body onload="init()">
@@ -126,7 +126,7 @@
         </div>
     </div>
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-    <script src="header_include.js"></script>
+    <script src="./js/header_include.js"></script>
 </body>
 
 </html>
