--- a/guest_hello.html
+++ b/guest_hello.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="/asssets/css/footer.css">
     <link rel="stylesheet" href="asssets/css/guest_hello.css">
 </head>
-<body onload="init()">
-    <div w3-header-include-html="/asssets/templates/header.html"></div>
+<body onload="loadSummary()">
+    <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div class="content">
         <h1>Good morning</h1>
     </div>
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-    <script src="header_include.js"></script>
+    <script src="./js/header_include.js"></script>
 </body>
 </html>
