--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
-    <script src="footer.js"></script>
+    <script src="./js/footer.js"></script>
   </head>
 
   <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
     
 
     
@@ -188,7 +189,7 @@
     <p>By email: dev-ak@gmail.com</p>
     </div>
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-    <script src="header_include.js"></script>
+    <script src="./js/header_include.js"></script>
     <script src="add_task.js"></script>
   </body>
 </html>
