--- a/summary.html
+++ b/summary.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
-    <script src="footer.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/summary.js"></script>
     <title>Summary</title>
 </head>
@@ -84,6 +84,6 @@
 
     </div> 
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-    <script src="header_include.js"></script>
+    <script src="js/header_include.js"></script>
 </body>
 </html>
