--- a/board.html
+++ b/board.html
@@ -26,7 +26,17 @@
 
         <div class="title-section">
             <h1 class="title">Board</h1>
-            <img src="./asssets/img/add task mobile.svg" alt="">
+            <img class="edit-btn" src="./asssets/img/add task mobile.svg" alt="">
+
+            <div class="responsive-searchbar dis-none">
+                <div class="secondSearch-bar">
+                    <input class="search-input" type="text" placeholder="Find Task">
+                    <img class="search-bar-line" src="./asssets/img/searchBar line.svg" alt="">
+                    <img class="search-icon" src="./asssets/img/search-icon.svg" alt="">
+                </div>
+            
+                <img class="edit-secondBtn" src="./asssets/img/responsiv-addBTN.svg" alt="">
+            </div>
         </div>
 
         <div class="search-bar">
@@ -76,7 +86,7 @@
 
             <div class="task-list">
                 <div class="card-head">
-                    <div>In progress</div>
+                    <div class="head-title">In progress</div>
                     <img src="./asssets/img/add card.svg" alt="">
                 </div>
                 <div class="task-card">
@@ -105,7 +115,7 @@
 
             <div class="task-list">
                 <div class="card-head">
-                    <div>Awaiting Feedback</div>
+                    <div class="head-title">Awaiting Feedback</div>
                     <img src="./asssets/img/add card.svg" alt="">
                 </div>
                 <div class="task-card">
@@ -134,7 +144,7 @@
 
             <div class="task-list">
                 <div class="card-head">
-                    <div>Done</div>
+                    <div class="head-title">Done</div>
                     <img src="./asssets/img/add card.svg" alt="">
                 </div>
                 <div class="task-card">
