--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
     <div class="main-content">
         <header>
             <div class="logo-container">
-                <img src="/asssets/img/mobile-login-logo-dark.svg" alt="">
+                <img src="./asssets/img/mobile-login-logo-dark.svg" alt="">
             </div>
         </header>
 
         <div id="inside-window" class="inside-window">
             <h1>Log in</h1>
-            <img class="login-line" src="/asssets/img/line.svg" alt="Trennlinie">
+            <img class="login-line" src="./asssets/img/line.svg" alt="Trennlinie">
             <form action="onsubmit">
                 <div class="input-field-outter-container">
                     <div class="input-field">
                         <input class="e-mail" type="email" name="" required placeholder="Email">
-                        <img src="/asssets/img/email-icon.svg" alt="e-mail icon">
+                        <img src="./asssets/img/email-icon.svg" alt="e-mail icon">
                     </div>
                     <div class="input-field">
                         <input id="input" class="password" type="password" required placeholder="Password">
                         <div id="lock-icon-container">
-                            <img id="lock-icon" src="/asssets/img/lock-icon.svg" alt="lock">
+                            <img id="lock-icon" src="./asssets/img/lock-icon.svg" alt="lock">
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div id="checkbox-container" class="checkbox-container">
                         <div id="checkmark-container">
                             <img class="checkbox-empty" onclick="checkmarkChecked()"
-                                src="/asssets/img/checkmark_container.svg" alt="">
+                                src="./asssets/img/checkmark_container.svg" alt="">
                         </div>
                         <label>Remember me</label>
                     </div>
@@ -56,7 +56,7 @@
                     </div>
             </form>
             <div class="guest-btn-container">
-                <a href="guest_hello.html"><button type="button" onclick="guestLogin()" class="guest-btn">Guest Log
+                <a href="./guest_hello.html"><button type="button" onclick="guestLogin()" class="guest-btn">Guest Log
                         in</button></a>
             </div>
         </div>
