--- a/add_task.html
+++ b/add_task.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="/asssets/css/header.css">
-  <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
-  <link rel="stylesheet" href="/asssets/css/footer.css">
+  <link rel="stylesheet" href="./asssets/css/header.css">
+  <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+  <link rel="stylesheet" href="./asssets/css/footer.css">
   <script src="./js/footer.js"></script>
-  <link rel="stylesheet" href="asssets/css/add_task.css">
+  <link rel="stylesheet" href="./asssets/css/add_task.css">
 </head>
 
 <body onload="init()">
-  <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
+  <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div>
   <header>
     <img class="small-logo" src="./add_task_img/small-logo.svg" alt="Logo" />
     <button id="create-button">Create &#10003;</button>
@@ -121,7 +121,7 @@
 
 
   <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-  <script src="js/header_include.js"></script>
+  <script src="./js/header_include.js"></script>
   <script src="./js/add_task.js"></script>
 </body>
 
