--- a/summary.html
+++ b/summary.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/asssets/css/header.css">
-    <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/asssets/css/footer.css">
-    <script src="js/footer.js"></script>
-    <script src="js/summary.js"></script>
+    <link rel="stylesheet" href="./asssets/css/header.css">
+    <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./asssets/css/footer.css">
+    <script src="./js/footer.js"></script>
+    <script src="./js/summary.js"></script>
     <title>Summary</title>
 </head>
 
 <body onload="init()">
-    <div w3-header-include-html="/asssets/templates/header.html"></div>
-    <div class="width" w3-header-include-html="/asssets/templates/web_header.html"></div>
+    <div w3-header-include-html="./asssets/templates/header.html"></div>
+    <div class="width" w3-header-include-html="./asssets/templates/web_header.html"></div>
     <div class="main-div">
 
         <span class="head-span-responsive dis-none">Kanban Project Management Tool</span>
@@ -83,7 +83,7 @@
         </section>
 
     </div> 
-    <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
-    <script src="js/header_include.js"></script>
+    <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
+    <script src="./js/header_include.js"></script>
 </body>
 </html>
