--- a/contacts.html
+++ b/contacts.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
     <script src="footer.js"></script>
+    <script src="contacts.js"></script>
 </head>
 
 <body onload="init()">
