--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/asssets/css/cover_page.css">
+    <link rel="stylesheet" href="./asssets/css/cover_page.css">
     <link rel="icon" type="image/x-icon" href="./img/mobile-login-logo-dark.svg">
-    <link rel="stylesheet" href="asssets/css/mobile-login.css">
-    <link rel="shortcut icon" href="asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./asssets/css/mobile-login.css">
+    <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+
 
 </head>
 
@@ -70,7 +71,9 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/register.js"></script>
 </body>
 
 </html>
