--- a/add_task.html
+++ b/add_task.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./asssets/css/footer.css">
   <script src="./js/footer.js"></script>
   <link rel="stylesheet" href="./asssets/css/add_task.css">
+  <script src="./js/login.js"></script>
 </head>
 
 <body onload="init()">
